@@ -15,6 +15,7 @@ v8.0.12
 - WL#11932: Remove Fabric support
 - WL#11898: Core API v1 alignment
 - BUG#28133321: Fix incorrect columns names representing aggregate functions
+- BUG#27962293: Fix Django 2.0 and MySQL 8.0 compatibility issues
 - BUG#27567999: Fix wrong docstring in ModifyStatement.patch()
 - BUG#27277937: Fix confusing error message when using an unsupported collation
 - BUG#26834200: Deprecate Row.get_string() method
